--- a/doc/matrix.texi
+++ b/doc/matrix.texi
@@ -1,97 +1,119 @@
 @example
 @group
-Ready PO files    bg cs da de el en eo es et fi fr gl hr id it
-                +----------------------------------------------+
-a2ps            |          []             []                   |
-bash            |          []       [] []       []             |
-bison           |          []          [] []    []             |
-clisp           |          []    []    []       []             |
-cpio            |       [] []          []       []             |
-diffutils       |       [] []       [] []       [] []    []    |
-enscript        |          []                   []             |
-error           |                               []             |
-fileutils       |    [] [] [] []       []       [] []          |
-findutils       |       [] []          [] []    [] []    [] [] |
-flex            |       []             []       []             |
-gawk            |                                              |
-gcal            |                                              |
-gcc             |       []                                     |
-gettext         |    [] [] [] []       []       [] []    [] [] |
-gnupg           |          []       []    []    []          [] |
-grep            |                   []    []                [] |
-hello           |       [] []       [] [] [] [] []       [] [] |
-id-utils        |       []                      []             |
-indent          |       [] []             []    [] []          |
-libc            |    [] [] [] []       []       [] []       [] |
-lilypond        |                                              |
-lynx            |    [] [] []                                  |
-m4              |    [] [] [] []                [] []    []    |
-make            |          []          []       [] []          |
-parted          |          []                      []          |
-ptx             |       [] []          [] []    [] []    []    |
-python          |                                              |
-recode          |       [] [] []    [] []       [] []       [] |
-sed             |    []    [] []    []    []    [] []    [] [] |
-sh-utils        |    [] [] [] []       [] []    [] []       [] |
-sharutils       |    [] [] [] []       []       [] []          |
-soundtracker    |                                              |
-sp              |                                              |
-tar             |    [] [] []          [] []    []       [] [] |
-texinfo         |    []    []       []          []             |
-textutils       |    [] [] [] []       []       [] []          |
-util-linux      |    []                                        |
-wdiff           |    [] []             [] []    [] []    []    |
-wget            |    [] [] [] []       [] []    [] []       [] |
-                +----------------------------------------------+
-                  bg cs da de el en eo es et fi fr gl hr id it
-                   0 14 21 27 10  1  8 20 13  1 28 17  0  9 11
+Ready PO files    bg cs da de el en eo es et fi fr gl he hr id it
+                +-------------------------------------------------+
+a2ps            |          []             []                      |
+bash            |          []       [] []       []                |
+bfd             |                                                 |
+binutils        |                                                 |
+bison           |          []          [] []    []                |
+clisp           |          []    []    []       []                |
+cpio            |       [] []          []       [] []             |
+diffutils       |       [] []       [] []       [] []       []    |
+enscript        |          []                   []                |
+error           |                      []       []                |
+fetchmail       |                                                 |
+fileutils       |    [] [] [] []       []       [] []             |
+findutils       |       [] []          [] []    [] []       [] [] |
+flex            |       []             []       []                |
+freetype        |                                                 |
+gas             |                                                 |
+gawk            |                                     []          |
+gcal            |                                                 |
+gcc             |                                                 |
+gettext         |    [] [] [] []       []       [] []       [] [] |
+gnupg           |          []       []    []    [] []          [] |
+gprof           |                                                 |
+grep            |          []       [] [] []    [] []          [] |
+hello           |       [] [] []    [] [] [] [] [] []          [] |
+id-utils        |       [] []                   []                |
+indent          |       [] []             []    [] []             |
+jpilot          |                               []                |
+kbd             |                                                 |
+ld              |                                                 |
+libc            |    [] [] [] []       []       [] []          [] |
+lilypond        |                                                 |
+lynx            |    [] [] []                                     |
+m4              |    [] [] [] []                [] []       []    |
+make            |       [] []          []       [] []             |
+nano            |                                  []       []    |
+opcodes         |                                                 |
+parted          |          []                      []             |
+ptx             |       [] []          [] []    [] []       []    |
+python          |                                                 |
+recode          |       [] [] []    [] []       [] [] []       [] |
+sed             |    [] [] [] []    []    []    [] []       [] [] |
+sh-utils        |    [] [] [] []       [] []    [] []          [] |
+sharutils       |    [] [] [] []       []       [] []             |
+soundtracker    |                                  []             |
+sp              |                                                 |
+tar             |    [] [] []          [] []    []          [] [] |
+texinfo         |    [] [] []       []          []                |
+textutils       |    [] [] [] []       []       [] []             |
+util-linux      |    [] []                                        |
+wdiff           |          []             []                      |
+wget            |    [] [] [] []       [] []    [] [] []          |
+                +-------------------------------------------------+
+                  bg cs da de el en eo es et fi fr gl he hr id it
+                   0 13 23 30 11  1  8 21 13  1 29 22  3  0  8 10
 @end group
 
 @group
-                  ja ko lv nl no pl pt pt_BR ru sk sl sv tr zh
-                +----------------------------------------------+
-a2ps            |          []                []    []          |  5
-bash            |                                              |  4
-bison           | []       []                []                |  7
-clisp           |          []                                  |  5
-cpio            |    []    []    []     []   []                |  9
-diffutils       |                []          []       []       | 10
-enscript        |          []           []   []                |  5
-error           |                                              |  1
-fileutils       | [] []    []    []     []   [] [] [] []       | 16
-findutils       |    []    []    []     []   []       []       | 14
-flex            |    []                      []       []       |  6
-gawk            |                                              |  0
-gcal            |                                              |  0
-gcc             | []                                           |  2
-gettext         | [] []    []    []     []   []    [] [] [] [] | 19
-gnupg           | []             []                   []       |  8
-grep            |                                              |  3
-hello           | [] []    []    []     []   [] []    []       | 17
-id-utils        |          []                []       []       |  5
-indent          |    []    []    []          [] []    [] []    | 12
-libc            | [] []       [] []     []      []    []       | 15
-lilypond        |          []                                  |  1
-lynx            | []       []           []   []       []       |  8
-m4              | []       []    []          []       []       | 12
-make            | []       []    []     []   []                |  9
-parted          | []       []                []                |  5
-ptx             |          [] [] [] []       []       []       | 13
-python          |                                              |  0
-recode          |                            []    [] []       | 11
-sed             | []       []           []   [] [] [] []       | 16
-sh-utils        | []       [] [] []     []   [] [] [] []    [] | 19
-sharutils       | []       []                []       []       | 11
-soundtracker    |                                              |  0
-sp              |                                              |  0
-tar             | []       [] [] []     []   []    [] []       | 16
-texinfo         | []                         []                |  6
-textutils       | []       [] [] []     []   [] [] []          | 15
-util-linux      |                       []                     |  2
-wdiff           |          []    []          [] []    []       | 12
-wget            | []          []        []   [] [] [] []    [] | 17
-                +----------------------------------------------+
-  29 teams        ja ko lv nl no pl pt pt_BR ru sk sl sv tr zh
-  40 domains      18  8  0 23  6 16  1  15   26  9  9 20  2  3  336
+                  ja ko lv nl no pl pt pt_BR ru sk sl sv tr uk zh
+                +-------------------------------------------------+
+a2ps            |          []                []    []             |  5
+bash            |                                                 |  4
+bfd             |                                                 |  0
+binutils        |                                                 |  0
+bison           | []       []                []                   |  7
+clisp           |          []                                     |  5
+cpio            |    []    []    []     []   []                   | 10
+diffutils       |                []          []       []          | 10
+enscript        |          []           []   []                   |  5
+error           |                                        []       |  3
+fetchmail       |                                                 |  0
+fileutils       | [] []    []    []     []   [] [] [] [] []       | 17
+findutils       |    []    []    []     []   []    [] [] []       | 16
+flex            |    []                      []       []          |  6
+freetype        |                                                 |  0
+gas             |                                                 |  0
+gawk            |                                        []       |  2
+gcal            |                                                 |  0
+gcc             |                                                 |  0
+gettext         | [] []          []     []   []    [] [] []    [] | 18
+gnupg           | []             []                   [] []       | 10
+gprof           |                                                 |  0
+grep            |                []                []    []       | 10
+hello           | [] [] [] [] [] []          [] []    [] [] []    | 21
+id-utils        |          []                []       []          |  6
+indent          |    []    []    []          [] []    [] []       | 12
+jpilot          |                                                 |  1
+kbd             |                                        []       |  1
+ld              |                                                 |  0
+libc            | [] []    [] [] []     []      []    [] []       | 17
+lilypond        | []       []                                     |  2
+lynx            | []       []           []   []       []          |  8
+m4              | []       []    []          []       []          | 12
+make            | [] []    []    []     []   []          []       | 12
+nano            |                                     []          |  3
+opcodes         |                                                 |  0
+parted          | []       []                []                   |  5
+ptx             |          [] [] [] []       []       [] []       | 14
+python          |                                                 |  0
+recode          |                []          []    [] []          | 13
+sed             | []       []           []   [] [] [] [] []       | 18
+sh-utils        | []       [] [] []     []   [] [] [] [] []    [] | 20
+sharutils       | []       []                []       []          | 11
+soundtracker    |                                                 |  1
+sp              |                                                 |  0
+tar             | []       [] [] []     []   []    [] [] []       | 17
+texinfo         | []                         []                   |  7
+textutils       | []       [] [] []     []   [] [] []             | 15
+util-linux      |                       []               []       |  4
+wdiff           |                            [] []       []       |  5
+wget            |          []                [] [] [] [] [] []    | 16
+                +-------------------------------------------------+
+  31 teams        ja ko lv nl no pl pt pt_BR ru sk sl sv tr uk zh
+  51 domains      17  9  1 23  6 17  1  13   26  9 11 20 19  2  2  369
 @end group
 @end example
