--- a/po/da.po
+++ b/po/da.po
@@ -1,12 +1,13 @@
 # gettext-0.10/po/da.po  -- initial revision  -*- po -*-
 # Copyright (C) 1996 Free Software Foundation, Inc.
+# Keld Simonsen <keld@dkuug.dk>, 2001
 # Thorbjørn Ravn Andersen <ravn@unixsnedkeren.dk>, 1996.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext 0.10.35\n"
+"Project-Id-Version: GNU gettext 0.10.39\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 2000-05-19 17:32+02:00\n"
+"PO-Revision-Date: 2001-08-28 17:32+02:00\n"
 "Last-Translator: Keld Simonsen <keld@dkuug.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -79,7 +80,6 @@ msgstr "%s: tilvalget '-W %s' tillader ikke et argument\n"
 
 #: lib/obstack.c:474 lib/xmalloc.c:86 src/po.c:308 src/po.c:381 src/po.c:389
 #: src/po.c:395 src/po.c:415 src/po.c:422 src/po.c:427 src/po.c:444
-#, fuzzy
 msgid "memory exhausted"
 msgstr "ikke mere ledig hukommelse"
 
@@ -226,10 +226,11 @@ msgid "warning: this message is not used"
 msgstr "advarsel: denne tekst bliver ikke brugt"
 
 #: src/msgcmp.c:283 src/po-lex.c:103
-#, fuzzy, c-format
+#, c-format
 msgid "found %d fatal error"
 msgid_plural "found %d fatal errors"
-msgstr[0] "fandt %d fatale fejl"
+msgstr[0] "fandt %d fatal fejl"
+msgstr[1] "fandt %d fatale fejl"
 
 #: src/msgcmp.c:356 src/msgfmt.c:667 src/msgmerge.c:512 src/xgettext.c:1157
 msgid "duplicate message definition"
@@ -369,22 +370,25 @@ msgid "error while opening \"%s\" for writing"
 msgstr "fejl opstået ved skrive-åbning af '%s'"
 
 #: src/msgfmt.c:360
-#, fuzzy, c-format
+#, c-format
 msgid "%d translated message"
 msgid_plural "%d translated messages"
-msgstr[0] "%d oversatte tekster"
+msgstr[0] "%d oversat tekst"
+msgstr[1] "%d oversatte tekster"
 
 #: src/msgfmt.c:365
-#, fuzzy, c-format
+#, c-format
 msgid ", %d fuzzy translation"
 msgid_plural ", %d fuzzy translations"
-msgstr[0] ", %d upræcise oversættelser"
+msgstr[0] ", %d upræcis oversættelse"
+msgstr[1] ", %d upræcise oversættelser"
 
 #: src/msgfmt.c:370
-#, fuzzy, c-format
+#, c-format
 msgid ", %d untranslated message"
 msgid_plural ", %d untranslated messages"
-msgstr[0] ", %d uoversatte tekster"
+msgstr[0] ", %d uoversat tekst"
+msgstr[1] ", %d uoversatte tekster"
 
 #: src/msgfmt.c:392
 #, c-format, no-wrap
@@ -441,6 +445,8 @@ msgid ""
 "%s: warning: PO file header missing, fuzzy, or invalid\n"
 "%*s  warning: charset conversion will not work"
 msgstr ""
+"%s: advarsel: PO filhoved mangler, upræcis eller ugyldig\n"
+"%*s  advarsel: tegnsætskonvertering vil ikke virke"
 
 #: src/msgfmt.c:503
 #, c-format
@@ -492,28 +498,26 @@ msgid "%s: warning: source file contains fuzzy translation"
 msgstr "%s: advarsel: kildetekstfilen indeholder løse oversættelser (fuzzy)"
 
 #: src/msgfmt.c:930
-#, fuzzy
 msgid "`msgid' and `msgid_plural' entries do not both begin with '\\n'"
-msgstr "`msgid' og `msgstr' teksterne begynder ikke begge med '\\n'"
+msgstr "'msgid' og 'msgid_plural'-teksterne begynder ikke begge med '\\n'"
 
 #: src/msgfmt.c:938
-#, fuzzy, c-format
+#, c-format
 msgid "`msgid' and `msgstr[%u]' entries do not both begin with '\\n'"
-msgstr "`msgid' og `msgstr' teksterne begynder ikke begge med '\\n'"
+msgstr "`msgid' og `msgstr[%u]'-teksterne begynder ikke begge med '\\n'"
 
 #: src/msgfmt.c:948
 msgid "`msgid' and `msgstr' entries do not both begin with '\\n'"
 msgstr "`msgid' og `msgstr' teksterne begynder ikke begge med '\\n'"
 
 #: src/msgfmt.c:963
-#, fuzzy
 msgid "`msgid' and `msgid_plural' entries do not both end with '\\n'"
-msgstr "`msgid' og `msgstr' teksterne slutter ikke begge med '\\n'"
+msgstr "`msgid' og `msgid_plural'-teksterne slutter ikke begge med '\\n'"
 
 #: src/msgfmt.c:971
-#, fuzzy, c-format
+#, c-format
 msgid "`msgid' and `msgstr[%u]' entries do not both end with '\\n'"
-msgstr "`msgid' og `msgstr' teksterne slutter ikke begge med '\\n'"
+msgstr "`msgid' og `msgstr[%u]'-teksterne slutter ikke begge med '\\n'"
 
 #: src/msgfmt.c:981
 msgid "`msgid' and `msgstr' entries do not both end with '\\n'"
@@ -524,12 +528,12 @@ msgid "number of format specifications in `msgid' and `msgstr' does not match"
 msgstr "forskelligt antal formater i `msgid' og `msgstr'"
 
 #: src/msgfmt.c:1014
-#, fuzzy, c-format
+#, c-format
 msgid "format specifications for argument %lu are not the same"
-msgstr "formaterne for argument %u er forskellige"
+msgstr "formaterne for argument %lu er forskellige"
 
 #: src/msgmerge.c:320
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] def.po ref.po\n"
 "Mandatory arguments to long options are mandatory for short options too.\n"
@@ -552,6 +556,8 @@ msgstr ""
 "Brug: %s [TILVALG] def.po ref.po\n"
 "Hvis et langt tilvalg kræver et argument, gælder det også for det tilsvarende\n"
 "korte tilvalg.\n"
+"  -C, --compendium=FIL        yderligere bibliotek af tekst-oversættelser,\n"
+"                              kan angves mere end én gang\n"
 "  -D, --directory=FILKATALOG  gennemsøg også FILKATALOG efter inddatafiler\n"
 "  -e, --no-escape             brug ikke C-escapesekvenser i uddata (standard)\n"
 "      --force-po              skriv PO filen selv om den er tom\n"
@@ -593,13 +599,13 @@ msgstr ""
 "skrevet til standard uddata.\n"
 
 #: src/msgmerge.c:799
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%sRead %ld old + %ld reference, merged %ld, fuzzied %ld, missing %ld, "
 "obsolete %ld.\n"
 msgstr ""
-"%sLæste %d gamle + %d reference, samlede %d, upræcise %d, mangler %d, "
-"forældede %d.\n"
+"%sLæste %ld gamle + %ld reference, flettede %ld, upræcise %ld, mangler %ld, "
+"forældede %ld.\n"
 
 #: src/msgmerge.c:806
 msgid " done.\n"
@@ -662,9 +668,9 @@ msgid "seek \"%s\" offset %ld failed"
 msgstr "seek '%s' offset %ld mislykkedes"
 
 #: src/msgunfmt.c:332
-#, fuzzy, c-format
+#, c-format
 msgid "file \"%s\" contains a not NUL terminated string"
-msgstr "filen '%s' er ikke i GNU .mo format"
+msgstr "filen '%s' indeholder en ikke-NUL afsluttet streng"
 
 #: src/msgunfmt.c:377
 #, c-format
@@ -672,7 +678,7 @@ msgid "file \"%s\" is not in GNU .mo format"
 msgstr "filen '%s' er ikke i GNU .mo format"
 
 #: src/ngettext.c:209
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] [TEXTDOMAIN] MSGID MSGID-PLURAL COUNT\n"
 "  -d, --domain=TEXTDOMAIN   retrieve translated message from TEXTDOMAIN\n"
@@ -684,20 +690,18 @@ msgid ""
 "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
 "  COUNT                     choose singular/plural form based on this value\n"
 msgstr ""
-"Brug: %s [TILVALG] [[[TEKSTDOMÆNE] TEKSTID] | [-s [TEKSTID]...]]\n"
+"Brug: %s [TILVALG] [TEKSTDOMÆNE] TEKSTID TEKSTID-FLERTAL ANTAL\n"
 "  -d, --domain=TEKSTDOMÆNE  hent oversatte tekster fra TEKSTDOMÆNE\n"
 "  -e                        aktivér fortolkning af visse escape-sekvenser\n"
 "  -E                        (ignoreret af hensyn til kompatibilitet)\n"
 "  -h, --help                vis denne hjælp og afslut\n"
-"  -n                        undertryk afsluttende linieskift\n"
 "  -V, --version             vis versionsinformation og afslut\n"
-"  [TEKSTDOMÆNE] TEKSTID     hent den oversatte tekst fra TEKSTDOMÆNE\n"
-"                            svarende til TEKSTID\n"
-"\n"
-"(TEKSTID svarer til 'msgid' felterne)\n"
+"  [TEKSTDOMÆNE]             hent den oversatte tekst fra TEKSTDOMÆNE\n"
+"  TEKSTID TEKSTID-FLERTAL   oversæt TEKSTID (ental) / TEKSTID-FLERTAL (flertal)\n"
+"  COUNT                     vælg ental/flertalsform ud fra denne værdi\n"
 
 #: src/ngettext.c:221
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "\n"
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
@@ -711,28 +715,23 @@ msgstr ""
 "miljøvariablen TEXTDOMAIN.  Hvis tekstkataloget ikke kan findes i det\n"
 "sædvanlige filkatalog, kan en anden placering angives vha miljøvariablen\n"
 "TEXTDOMAINDIR.\n"
-"Når tilvalget -s bruges, opfører programmet sig som 'echo' kommandoen, men\n"
-"argumenterne bliver ikke blot kopieret til standard uddata.  I stedet\n"
-"oversættes de tekster der findes i det valgte tekstkatalog.\n"
 "Standard filkataloget for søgning er: %s\n"
 
 #: src/open-po.c:64
 msgid "<stdin>"
-msgstr ""
+msgstr "<stdin>"
 
 #: po-gram-gen.y:87
 msgid "inconsistent use of #~"
-msgstr ""
+msgstr "inkonsistent brug af #~"
 
 #: po-gram-gen.y:168
-#, fuzzy
 msgid "missing `msgstr[]' section"
-msgstr "`msgstr' afsnit mangler"
+msgstr "`msgstr[]'-afsnit mangler"
 
 #: po-gram-gen.y:176
-#, fuzzy
 msgid "missing `msgid_plural' section"
-msgstr "`msgstr' afsnit mangler"
+msgstr "`msgstr_plural'-afsnit mangler"
 
 #: po-gram-gen.y:183
 msgid "missing `msgstr' section"
@@ -740,11 +739,11 @@ msgstr "`msgstr' afsnit mangler"
 
 #: po-gram-gen.y:228
 msgid "first plural form has nonzero index"
-msgstr ""
+msgstr "første flertalsform har ikke-nul indeks"
 
 #: po-gram-gen.y:230
 msgid "plural form has wrong index"
-msgstr ""
+msgstr "flertalsform har forkert indeks"
 
 #. CAUTION: If you change this macro, you must also make identical
 #. changes to the function of the same name in src/po-lex.c
@@ -759,9 +758,8 @@ msgid "keyword \"%s\" unknown"
 msgstr "ukendt nøgleord '%s'"
 
 #: src/po-lex.c:377
-#, fuzzy
 msgid "invalid control sequence"
-msgstr "ulovlig kontrolsekvens"
+msgstr "ugyldig kontrolsekvens"
 
 #: src/po-lex.c:480
 msgid "end-of-file within string"
@@ -773,12 +771,12 @@ msgstr "tekststreng var ikke afsluttet ved linieskift"
 
 #: src/po-lex.c:528 src/write-po.c:291 src/write-po.c:373
 msgid "invalid multibyte sequence"
-msgstr ""
+msgstr "Ugyldig multibytesekvens"
 
 #: src/po.c:302 src/po.c:374 src/po.c:409 src/po.c:439
 #, c-format
 msgid "%s: warning: "
-msgstr ""
+msgstr "%s: advarsel: "
 
 #: src/po.c:303
 #, c-format
@@ -786,14 +784,16 @@ msgid ""
 "Charset \"%s\" is not a portable encoding name.\n"
 "Message conversion to user's charset might not work.\n"
 msgstr ""
+"Tegnsæt '%s' er ikke et flytbart kodningsnavn.\n"
+"Tekstkonvertering til brugers tegnsæt virker muligvis ikke.\n"
 
 #: src/po.c:370 src/po.c:405
 msgid "Continuing anyway, expect parse errors."
-msgstr ""
+msgstr "Fortsætter alligevel, forvent fortolkningsfejl."
 
 #: src/po.c:372
 msgid "Continuing anyway."
-msgstr ""
+msgstr "Fortsætter alligevel."
 
 #: src/po.c:375
 #, c-format
@@ -801,17 +801,21 @@ msgid ""
 "Charset \"%s\" is not supported. %s relies on iconv(),\n"
 "and iconv() does not support \"%s\".\n"
 msgstr ""
+"Tegnsæt '%s' er ikke understøttet. %s bygger på iconv(),\n"
+"og iconv() understøtter ikke '%s'.\n"
 
 #: src/po.c:385 src/po.c:418
 msgid ""
 "Installing GNU libiconv and then reinstalling GNU gettext\n"
 "would fix this problem.\n"
 msgstr ""
+"Installering af GNU libiconv og geninstallering af GNU gettext\n"
+"vil løse dette problem.\n"
 
 #: src/po.c:393 src/po.c:425
 #, c-format
 msgid "%s\n"
-msgstr ""
+msgstr "%s\n"
 
 #: src/po.c:410
 #, c-format
@@ -819,12 +823,16 @@ msgid ""
 "Charset \"%s\" is not supported. %s relies on iconv().\n"
 "This version was built without iconv().\n"
 msgstr ""
+"Tegnsæt '%s' er ikke understøttet. %s bygger på iconv(),\n"
+"Denne version er bygget uden iconv().\n"
 
 #: src/po.c:440
 msgid ""
 "Charset missing in header.\n"
 "Message conversion to user's charset will not work.\n"
 msgstr ""
+"Tehnsæt manngler i hoved.\n"
+"Tekstkonvertering til brugers tegnsæt vil ikke virke.\n"
 
 #: src/write-po.c:322
 #, c-format
@@ -868,7 +876,7 @@ msgstr ""
 
 #: src/xgettext.c:378
 msgid "xgettext cannot work without keywords to look for"
-msgstr ""
+msgstr "xgettext kan ikke arbejde uden nogen nøgleord at kigge efter"
 
 #: src/xgettext.c:484
 #, c-format
@@ -916,7 +924,7 @@ msgstr ""
 "  -F, --sort-by-file             sortér uddata efter filposition\n"
 
 #: src/xgettext.c:540
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "  -h, --help                     display this help and exit\n"
 "  -i, --indent                   write the .po file using indented style\n"
@@ -934,7 +942,6 @@ msgstr ""
 "  -j, --join-existing            kombiner tekster med eksisterende fil\n"
 "  -k, --keyword[=ORD]            søg efter yderligere nøgleord.  Hvis ORD ikke \n"
 "                                 angives, bruges standard-nøgleord ikke).\n"
-"  -l, --string-limit=TAL         sæt grænse for tekststrenglængde til TAL (%u)\n"
 "  -L, --language=NAVN            genkend det angivne sprog (C, C++, PO),\n"
 "                                 ellers gættes det fra filendelsen\n"
 "  -m, --msgstr-prefix[=STRENG]   brug STRENG/'' som prefiks for `msgstr' tekster\n"
@@ -971,19 +978,16 @@ msgstr ""
 "Hvis INPUTFIL er -, læses fra standard inddata.\n"
 
 #: src/xgettext.c:914
-#, fuzzy, c-format
+#, c-format
 msgid "%s:%d: warning: keyword nested in keyword arg"
-msgstr "%s:%d: advarsel: streng'literal' ikke afsluttet"
+msgstr "%s:%d: advarsel: nøgleord indlejret i nøgleordsargument"
 
 #: src/xgettext.c:924
 #, c-format
 msgid "%s:%d: warning: keyword between outer keyword and its arg"
-msgstr ""
+msgstr "%s:%d: advarsel: nøgleord mellem ydre nøgleord og dets argument"
 
 #: src/xgettext.c:1420
 #, c-format
 msgid "language `%s' unknown"
 msgstr "ukendt sprog `%s'"
-
-#~ msgid "%s: warning: no header entry found"
-#~ msgstr "%s: advarsel: \"header\" element ikke angivet"
